Implement map file naming

--- a/economy-gui/src/main/resources/fxml/map_generator.fxml
+++ b/economy-gui/src/main/resources/fxml/map_generator.fxml
@@ -42,7 +42,9 @@
     <bottom>
         <HBox BorderPane.alignment="CENTER">
             <children>
-                <Button fx:id="readyButton" mnemonicParsing="false" text="READY"/>
+                <Label text="Map name: "/>
+                <TextField fx:id="mapNameTextField" minWidth="200"/>
+                <Button fx:id="readyButton" mnemonicParsing="false" text="READY" maxWidth="100"/>
             </children>
         </HBox>
     </bottom>
